# HDA

./: .gitignore  HOW TO START  confirm-gates.patch  pyproject.toml
adapters/: core_to_chart.py
config/panel/: global.json
data/ingest/: INPUT.backup.md  INPUT.md  hello.txt  links_demo.txt  notes.md
data/ontology/: minitaxonomy.json
docs/: DEV_NOTES.md
hdt/core/: audit_pack.py  control_resolver.py  controls.py  llm_client.py  llm_client_audit.py  output_router.py  prompt_audit.py  provenance.py  schema_ingest.py  schema_ops.py  schema_validate.py  topic.py
hdt/core/amu/: __init__.py  __init__.py.bak-20251102010148  extract.py  schema.py
hdt/core/ingest/: alignment.py  normalizer.py
hdt/core/links/: schema.py  (+2 more)
out_ought/: _controls_catalog.md  deontic.jsonl  ends_means.jsonl  integrity_fusion.jsonl  validation_ought.json
scripts/: diff_runs.py  hdt-one.ps1  ingest.py  run-hdt.ps1  run_is.py  run_is.py.bak-20251102005710  run_is.py.bak-20251102010148  run_is.py.bak-20251102010433  run_ought.py  run_p01_amus.py  run_p01_structure.py  run_pipeline.py  run_structure.py  smoke_claims.py  smoke_links.py
tests/amu/: test_amu.py
tests/ingest/: test_normalizer.py  test_normalizer_v11.py  test_skeleton.py
tests/is_analysis/: test_causal.py  test_evidential.py  test_scaffold.py  test_time_modality.py
tests/links/: test_links.py
tests/parsers/: test_parse_auto.py
tests/pipeline/: test_batch.py  test_pipeline_smoke.py
tests/segment/: test_segment.py
tests/threads/: test_threads.py
tests/topic/: test_topic_assign.py
tools/: Commit-With-Timestamp.ps1
(+74 files in other folders)
